<resources>
    <string name="app_name">BililiveAutoDanmaku</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="msg_check_captcha">Please check the Captcha.</string>
    <string name="msg_login_failed">Login failed. Wrong username, password, or Captcha expired.</string>
    <string name="label_login">Login</string>
    <string name="label_send_danmaku">Send Danmaku</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_cr_code">Region Code</string>
    <string name="label_verification_code">Verification Code</string>
    <string name="label_send_code">Send Code</string>
    <string name="msg_verification_code_sent">Verification code is sent.</string>
    <string name="msg_empty_username">Please fill in the username.</string>
    <string name="msg_empty_password">Please fill in the password.</string>
    <string name="msg_empty_phone">Please fill in the phone number.</string>
    <string name="msg_empty_verification_code">Please fill in the verification code.</string>
    <string name="label_qr_instructions">Save and scan the QR Code from Bilibili App, if you can’t find the image please take a screenshot.</string>
    <string name="msg_qr_confirm_login">Please confirm login.</string>
    <string name="label_save">Save</string>
    <string name="msg_saved_to">Saved to %s</string>
    <string name="msg_qrcode_close_warning">The QR code will be expired if you press back, proceed?</string>
    <string name="label_edit">Edit</string>
    <string name="label_room_id">Room ID</string>
    <string name="label_send_interval">Send Interval (ms)</string>
    <string name="label_next_line">Next Danmaku: (Can be set by clicking a list item)</string>
    <string name="label_loop">Loop</string>
    <string name="label_start">Start</string>
    <string name="label_stop">Stop</string>
    <string name="label_stopped">Stopped.</string>
    <string name="label_author">Made by: lxfly2000</string>
    <string name="label_visit_github">Visit GitHub repo</string>
    <string name="label_menu_quit_app">Quit App</string>
    <string name="label_menu_logout">Log out</string>
    <string name="label_menu_about">About</string>
    <string name="msg_no_danmaku_set">No Danmaku set.</string>
    <string name="label_n_danmaku_set">(%d lines of Danmaku set)</string>
    <string name="label_visit_live_room">Visit live room</string>
</resources>