<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".LoginWithPhoneFragment" android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Spinner
                android:layout_width="140dp"
                android:layout_height="match_parent" android:id="@+id/spinnerCRCode"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/editPhone">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_phone_number" android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.geetest.sdk.views.GT3GeetestButton
                android:id="@+id/btn_geetest_phone"
                android:layout_width="290dp"
                android:layout_height="44dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/label_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonSend"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/editVerificationCode">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_verification_code" android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLoginWithPhone"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewSMSStatus"/>
</LinearLayout>