<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".LoginWithAccountFragment" android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/editUsername">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_user_name" android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/editPassword" app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.geetest.sdk.views.GT3GeetestButton
                android:id="@+id/btn_geetest_account"
                android:layout_width="290dp"
                android:layout_height="44dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLoginWithAccount"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewAccountStatus"/>

</LinearLayout>